# alloy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  winbuild.cmd
src/: CMakeLists.txt  CryptoNoteConfig.h  version.h.in
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.cpp  BlockingQueue.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  FileMappedVector.cpp  FileMappedVector.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  (+15 more)
src/ConnectivityTool/: ConnectivityTool.cpp
src/CryptoNoteCore/: Account.cpp  Account.h  AddBlockErrorCondition.cpp  AddBlockErrorCondition.h  AddBlockErrors.cpp  AddBlockErrors.h  BlockIndex.cpp  BlockIndex.h  BlockValidationErrors.cpp  BlockValidationErrors.h  Blockchain.cpp  Blockchain.h  BlockchainCache.cpp  BlockchainCache.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  BlockchainReadBatch.cpp  BlockchainReadBatch.h  BlockchainStorage.cpp  BlockchainStorage.h  BlockchainUtils.cpp  BlockchainUtils.h  BlockchainWriteBatch.cpp  BlockchainWriteBatch.h  CachedBlock.cpp  CachedBlock.h  CachedTransaction.cpp  CachedTransaction.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CoreErrors.cpp  CoreErrors.h  CoreStatistics.h  CryptoNoteBasic.cpp  (+90 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/HTTP/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: ConnectionContext.h  IP2pNodeInternal.cpp  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.cpp  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h
src/PaymentGate/: NodeFactory.cpp  NodeFactory.h  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletFactory.cpp  WalletFactory.h  WalletService.cpp  WalletService.h  WalletServiceErrorCategory.cpp  WalletServiceErrorCategory.h
src/PaymentGateService/: ConfigurationManager.cpp  ConfigurationManager.h  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  RpcNodeConfiguration.cpp  RpcNodeConfiguration.h  main.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp  RpcServerConfig.h
src/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.cpp  MemoryStream.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
src/SimpleWallet/: PasswordContainer.cpp  PasswordContainer.h  SimpleWallet.cpp  SimpleWallet.h
src/System/: Context.h  ContextGroup.cpp  ContextGroup.h  ContextGroupTimeout.cpp  ContextGroupTimeout.h  Event.cpp  Event.h  EventLock.cpp  EventLock.h  InterruptedException.cpp  InterruptedException.h  Ipv4Address.cpp  Ipv4Address.h  OperationTimeout.h  RemoteContext.h  RemoteEventLock.cpp  RemoteEventLock.h  TcpStream.cpp  TcpStream.h
src/Transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  CommonTypes.h  IBlockchainSynchronizer.h  IObservableImpl.h  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersContainer.h  TransfersSubscription.cpp  TransfersSubscription.h  TransfersSynchronizer.cpp  TransfersSynchronizer.h  TypeHelpers.h
src/Wallet/: IFusionManager.h  LegacyKeysImporter.cpp  LegacyKeysImporter.h  WalletAsyncContextCounter.cpp  WalletAsyncContextCounter.h  (+17 more)
(+281 files in other folders)
