set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -maes -fno-inline")
add_definitions("-D_DEFAULT_SOURCE -D_GNU_SOURCE")

file(GLOB_RECURSE BlockchainExplorer BlockchainExplorer/*)
file(GLOB_RECURSE Common Common/*)
file(GLOB_RECURSE Crypto crypto/*)
file(GLOB_RECURSE CryptoNoteCore CryptoNoteCore/* CryptoNoteConfig.h)
file(GLOB_RECURSE CryptoNoteProtocol CryptoNoteProtocol/*)
file(GLOB_RECURSE Daemon Daemon/*)
file(GLOB_RECURSE Http HTTP/*)
file(GLOB_RECURSE InProcessNode InProcessNode/*)
file(GLOB_RECURSE Logging Logging/*)
file(GLOB_RECURSE NodeRpcProxy NodeRpcProxy/*)
file(GLOB_RECURSE P2p P2p/*)
file(GLOB_RECURSE Rpc Rpc/*)
file(GLOB_RECURSE Serialization Serialization/*)
file(GLOB_RECURSE SimpleWallet SimpleWallet/*)
file(GLOB_RECURSE System System/* Platform/Linux/System/* Platform/Posix/System/*)
file(GLOB_RECURSE Transfers Transfers/*)
file(GLOB_RECURSE Wallet Wallet/*)
file(GLOB_RECURSE WalletLegacy WalletLegacy/*)

file(GLOB_RECURSE JsonRpcServer JsonRpcServer/*)

file(GLOB_RECURSE PaymentGate PaymentGate/*)
file(GLOB_RECURSE PaymentGateService PaymentGateService/*)
file(GLOB_RECURSE Miner Miner/*)

source_group("" FILES $${Common}  ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${Daemon} ${JsonRpcServer} ${Http} ${Logging} ${NodeRpcProxy} ${P2p} ${Rpc} ${Serialization} ${SimpleWallet} ${System} ${Transfers} ${Wallet} ${WalletLegacy})

add_library(BlockchainExplorer ${BlockchainExplorer})
add_library(Crypto ${Crypto})
add_library(Http ${Http})
add_library(InProcessNode ${InProcessNode})
add_library(Logging ${Logging})
add_library(NodeRpcProxy ${NodeRpcProxy})
add_library(Rpc ${Rpc})
add_library(P2P ${CryptoNoteProtocol} ${P2p})
add_library(Serialization ${Serialization})
add_library(System ${System})
add_library(Transfers ${Transfers})
add_library(PaymentGate ${PaymentGate})
add_library(JsonRpcServer ${JsonRpcServer})

add_library(Common ${Common})
target_link_libraries(Common ${CMAKE_THREAD_LIBS_INIT})

add_library(CryptoNoteCore ${CryptoNoteCore})
target_link_libraries(CryptoNoteCore Common Crypto Logging Serialization)

add_library(Wallet ${Wallet} ${WalletLegacy})
target_link_libraries(Wallet ${CMAKE_THREAD_LIBS_INIT})

add_executable(Daemon ${Daemon})
add_executable(SimpleWallet ${SimpleWallet})

add_executable(PaymentGateService ${PaymentGateService})
target_include_directories(PaymentGateService PUBLIC ${UPNPC_CFG_INCLUDE_DIRS} ${ROCKS_CFG_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
target_compile_options(PaymentGateService PUBLIC ${UPNPC_CFG_CFLAGS} ${ROCKS_CFG_CFLAGS})
target_link_libraries(PaymentGateService PaymentGate JsonRpcServer Wallet NodeRpcProxy Transfers P2P CryptoNoteCore Crypto Rpc Http Serialization System Logging Common InProcessNode BlockchainExplorer ${UPNPC_CFG_LIBRARIES} ${ROCKS_CFG_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(PaymentGateService version)

add_executable(Miner ${Miner})
target_link_libraries(Miner CryptoNoteCore Rpc Serialization System Http Logging Common Crypto ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})

target_include_directories(P2P PUBLIC ${UPNPC_CFG_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
target_link_libraries(P2P CryptoNoteCore Logging ${UPNPC_CFG_LIBRARIES} ${Boost_LIBRARIES} )
target_compile_options(P2P PUBLIC ${UPNPC_CFG_CFLAGS} )
target_link_directories(P2P PUBLIC ${UPNPC_CFG_LIBRARY_DIRS} )

target_link_libraries(Rpc CryptoNoteCore Logging P2P)
target_link_libraries(CryptoNoteCore Common Logging Crypto P2P Rpc Http Serialization System ${Boost_LIBRARIES})
target_link_libraries(Daemon P2P Rpc Serialization System Http Logging CryptoNoteCore Crypto Common ${UPNPC_CFG_LIBRARIES} ${ROCKS_CFG_LIBRARIES} ${Boost_LIBRARIES} )
target_link_libraries(SimpleWallet Wallet NodeRpcProxy Transfers Rpc P2P ${UPNPC_CFG_LIBRARIES} Http Serialization CryptoNoteCore System Logging Common Crypto ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})

add_dependencies(Rpc version)
add_dependencies(Daemon version)
add_dependencies(SimpleWallet version)
add_dependencies(P2P version)

set_property(TARGET Daemon PROPERTY OUTPUT_NAME "alloyd")
set_property(TARGET SimpleWallet PROPERTY OUTPUT_NAME "simplewallet")
set_property(TARGET PaymentGateService PROPERTY OUTPUT_NAME "walletd")
set_property(TARGET Miner PROPERTY OUTPUT_NAME "miner")
